# ansible-role-nginx

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
templates/: nginx.conf.j2  site.reverse_proxy.conf.j2
templates/reverse_proxy/: general.conf.j2  nginx.proxy.conf.j2  proxy.conf.j2  security.conf.j2
vars/: debian.yml  main.yml  redhat.yml
