[project]
name = "ansible-role-nginx"
version = "0.0.0"
description = "Ansible role for setting up the nginx sever."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = [loadbalancer, nginx, reverseproxy, server, vhost, web, webserver]

repository = "https://github.com/jomrr/ansible-role-nginx"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = true
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
